/d6.6/t/ndeck に対し、playlistOrder, playlistOrderBy, itemOrder のパラメーターを許容する
